# isaac-rubato

./: .gitignore  README.md  isaac-rubato  mkdocs.yml  pyproject.toml  rubato  rubato-docs
06-30-2026-experiments/: _template.sh
06-30-2026-experiments/cartpole/: .gitignore  README.md  train.sh  validate.sh
docs/: architecture.md  components.md  getting-started.md  index.md  roadmap.md
experiments/06-30-2026-experiments/: .gitignore  PERF_FINDINGS.md  PERF_TEST_PLAN.md  README.md  eval_ckpt.py
experiments/06-30-2026-experiments/_template/: env.py  train.sh
experiments/06-30-2026-experiments/cartpole/: README.md  env.py  train.sh  validate.sh
experiments/06-30-2026-experiments/franka-reach/: README.md  env.py  train.sh
experiments/06-30-2026-experiments/franka-reach/scenes/: README.md
experiments/06-30-2026-experiments/logs/rsl_rl/shadow_hand/2026-06-25_21-34-52_shadow_hand_repose_cube-adaptive-s42/: events.out.tfevents.1782423343.puget.258714.0
experiments/06-30-2026-experiments/logs/rsl_rl/shadow_hand/2026-06-25_21-34-52_shadow_hand_repose_cube-adaptive-s42/git/: isaac-rubato.diff
experiments/06-30-2026-experiments/logs/rsl_rl/shadow_hand/2026-06-25_21-34-52_shadow_hand_repose_cube-adaptive-s42/params/: agent.yaml  env.yaml
experiments/06-30-2026-experiments/shadow-hand-repose-cube/: debug_env.py  env.py  train.sh
experiments/06-30-2026-experiments/shadow-hand-repose-cube/logs/rsl_rl/shadow_hand/2026-06-25_20-33-44_shadow_hand_repose_cube-fixed-s42/: events.out.tfevents.1782420116.puget.189103.0
experiments/06-30-2026-experiments/shadow-hand-repose-cube/logs/rsl_rl/shadow_hand/2026-06-25_20-33-44_shadow_hand_repose_cube-fixed-s42/params/: agent.yaml  env.yaml
experiments/06-30-2026-experiments/shadow-hand-repose-cube/logs/rsl_rl/shadow_hand/2026-06-25_20-44-07_shadow_hand_repose_cube-fixed-s42/: events.out.tfevents.1782420650.puget.201137.0
experiments/06-30-2026-experiments/shadow-hand-repose-cube/logs/rsl_rl/shadow_hand/2026-06-25_20-44-07_shadow_hand_repose_cube-fixed-s42/git/: IsaacLab.diff  isaac-rubato.diff
experiments/06-30-2026-experiments/shadow-hand-repose-cube/logs/rsl_rl/shadow_hand/2026-06-25_20-44-07_shadow_hand_repose_cube-fixed-s42/params/: env.yaml
experiments/anymal_transfer/: STUDY_LOG.md  anymal.py  backends.py  domain_rand.py
experiments/trossen_cube_lift/: README.md
experiments/trossen_cube_lift/trossen_cube/: paths.py
install/: verify.py
integration/: INTEGRATION.md  README.md  apply_isaaclab_delta.sh  cli_solver_flag.patch  gui_toggle.py  isaaclab_newton_adaptive.patch
integration/newton_adaptive_ui/newton_adaptive_ui/: extension.py
logs/rsl_rl/reach_franka/2026-06-27_23-44-03_franka-reach-mujoco-adaptive-s43-r1/: events.out.tfevents.1782621853.ubuntu.2446491.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach_franka/2026-06-27_23-44-03_franka-reach-mujoco-adaptive-s43-r1/params/: agent.yaml  env.yaml
logs/rsl_rl/reach_franka/2026-06-28_00-18-20_franka-reach-mujoco-s43-r1/: events.out.tfevents.1782623911.ubuntu.2448935.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach_franka/2026-06-28_00-18-20_franka-reach-mujoco-s43-r1/params/: agent.yaml  env.yaml
logs/rsl_rl/reach_franka/2026-06-28_00-22-13_franka-reach-mujoco-adaptive-s44-r1/: events.out.tfevents.1782624142.ubuntu.2449388.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach_franka/2026-06-28_00-22-13_franka-reach-mujoco-adaptive-s44-r1/git/: IsaacLab.diff
logs/rsl_rl/reach_franka/2026-06-28_00-22-13_franka-reach-mujoco-adaptive-s44-r1/params/: agent.yaml  env.yaml
logs/rsl_rl/reach_franka/2026-06-28_00-57-45_franka-reach-mujoco-s44-r1/: events.out.tfevents.1782626275.ubuntu.2451435.0  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_450.pt  model_50.pt  model_500.pt  model_550.pt  model_600.pt  model_650.pt  model_700.pt  model_750.pt  model_800.pt  model_850.pt  model_900.pt  model_950.pt  model_999.pt
logs/rsl_rl/reach_franka/2026-06-28_00-57-45_franka-reach-mujoco-s44-r1/params/: agent.yaml  env.yaml
